--- a/common.yaml
+++ b/common.yaml
@@ -19,18 +19,18 @@ php::fpm::pools:
     pm: static
     pm_max_children: #pm_max_children#
 php::settings:
-  PHP/expose_php: #expose_php#
-  PHP/short_open_tag: #short_open_tag#
+  PHP/expose_php: '#expose_php#'
+  PHP/short_open_tag: '#short_open_tag#'
   PHP/realpath_cache_ttl: #realpath_cache_ttl#
   PHP/max_execution_time: #max_execution_time#
   PHP/max_input_time: #max_input_time#
   PHP/memory_limit: #memory_limit#
   PHP/error_reporting: #error_reporting#
-  PHP/display_errors: #display_errors#
+  PHP/display_errors: '#display_errors#'
   PHP/error_log: #error_log#
   PHP/post_max_size: #post_max_size#
   PHP/default_charset: #default_charset#
-  PHP/file_uploads: #file_uploads#
+  PHP/file_uploads: '#file_uploads#'
   PHP/upload_tmp_dir: #upload_tmp_dir#
   PHP/upload_max_filesize: #upload_max_filesize#
   Date/date.timezone: #date_timezone#
